@@ -2,6 +2,13 @@
 \title{DiffBind News}
 \encoding{UTF-8}
 
+\section{Version 1.14.4}{
+\itemize{
+   \item{Fix bug when score=DBA_SCORE_TMM_READS_FULL_CPM}
+ }
+}
+
+
 \section{Version 1.14.2}{
 \itemize{
    \item{Fix bug when not all chromosome names in first peakset}
